Overflow:hidden (fix for ugly big tables on small screen)

--- a/app/style.css
+++ b/app/style.css
@@ -76,6 +76,7 @@ p.p-seq {
 
 #stage-table td {
     vertical-align: top;
+    overflow: hidden;
 }
 
 html, body {
